// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`composition as should render correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #212121;
  border-radius: 6px;
  color: #fff;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  fill: #fff;
  font-size: 0.75rem;
  font-weight: 600;
  height: 1.5rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: inherit;
  padding: 0 0.75em;
}

<div
  class="emotion-3 emotion-0 emotion-1 fp-Box fp-Tag"
>
  <div
    class="emotion-0 emotion-1 emotion-2 fp-Box fp-TagContent"
  >
    Hello world
  </div>
</div>
`;

exports[`composition hook should return with Tag props 1`] = `
Object {
  "children": <React.Fragment>
    <ForwardRef(Comp)
      className="css-jihuf0 css-1pwrqjj css-3ekj6a fp-Box fp-TagContent"
    />
  </React.Fragment>,
  "className": "css-xo6kxn css-1pwrqjj css-3ekj6a fp-Box fp-Tag",
}
`;

exports[`composition render props should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #212121;
  border-radius: 6px;
  color: #fff;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  fill: #fff;
  font-size: 0.75rem;
  font-weight: 600;
  height: 1.5rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

<div
  class="emotion-0 emotion-1 emotion-2 fp-Box fp-Tag"
>
  Hello world
</div>
`;

exports[`defaultProps should render correctly for className 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #212121;
  border-radius: 6px;
  color: #fff;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  fill: #fff;
  font-size: 0.75rem;
  font-weight: 600;
  height: 1.5rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: inherit;
  padding: 0 0.75em;
}

.emotion-3 {
  color: #574feb !important;
}

<div
  class="emotion-4 emotion-0 emotion-3 test fp-Box fp-Tag"
>
  <div
    class="emotion-0 emotion-1 emotion-2 emotion-3 test fp-Box fp-TagContent"
  >
    hello world
  </div>
</div>
`;

exports[`overrides Tag.Close.root should render correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-11 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #212121;
  border-radius: 6px;
  color: #fff;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  fill: #fff;
  font-size: 0.75rem;
  font-weight: 600;
  height: 1.5rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: inherit;
  padding: 0 0.75em;
}

.emotion-7 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #fcfcfc;
  border-radius: 6px;
  color: #212121;
  fill: #212121;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 600;
  min-height: 2.75rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0 1rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  border: 1px solid #d9d9d9;
}

.emotion-7[disabled],
.emotion-7[aria-disabled="true"] {
  cursor: not-allowed;
  opacity: 0.7;
  outline: unset;
  pointer-events: unset;
}

.emotion-7:focus {
  outline: unset;
  z-index: 2;
  box-shadow: #b3b3b3 0px 0px 0px 1px, #d9d9d9 0px 0px 0px 3px;
  border-color: transparent;
}

.emotion-7:hover {
  background-color: #efefef;
}

.emotion-7:hover:active {
  background-color: #d6d6d6;
}

.emotion-7 {
  background-color: unset;
  border: unset;
  color: #212121;
  fill: #212121;
  box-shadow: unset;
}

.emotion-7:hover {
  background-color: rgba(0,0,0,0.05);
}

.emotion-7:hover:active {
  background-color: rgba(0,0,0,0.1);
}

.emotion-6.emotion-6 {
  min-height: unset;
  padding: 0.5em;
}

.emotion-5 {
  font-size: 1rem !important;
}

.emotion-3 {
  fill: inherit;
  position: relative;
  height: 1em;
  width: 1em;
}

.emotion-10.emotion-10.emotion-10 {
  background-color: #212121;
  color: #fff;
  fill: #fff;
  height: 1.5em;
  padding: 0 0.25em;
  margin-right: 0.25em;
  margin-left: -0.25em;
}

.emotion-10.emotion-10.emotion-10:hover {
  background-color: #080808;
}

.emotion-10.emotion-10.emotion-10:focus {
  box-shadow: unset;
}

.emotion-10.emotion-10.emotion-10 {
  background-color: red;
}

<div
  class="emotion-11 emotion-0 emotion-1 fp-Box fp-Tag"
>
  <div
    class="emotion-0 emotion-1 emotion-2 fp-Box fp-TagContent"
  >
    hello world
  </div>
  <button
    class="emotion-6 emotion-7 emotion-0 emotion-1 emotion-10 fp-Box fp-TagClose fp-Button fp-ButtonClose"
    type="button"
  >
    <svg
      class="emotion-3 emotion-0 emotion-5 fp-Box fp-Icon"
      role="img"
      viewBox="0 0 320 512"
    >
      <path
        d="M193.94 256L296.5 153.44l21.15-21.15c3.12-3.12 3.12-8.19 0-11.31l-22.63-22.63c-3.12-3.12-8.19-3.12-11.31 0L160 222.06 36.29 98.34c-3.12-3.12-8.19-3.12-11.31 0L2.34 120.97c-3.12 3.12-3.12 8.19 0 11.31L126.06 256 2.34 379.71c-3.12 3.12-3.12 8.19 0 11.31l22.63 22.63c3.12 3.12 8.19 3.12 11.31 0L160 289.94 262.56 392.5l21.15 21.15c3.12 3.12 8.19 3.12 11.31 0l22.63-22.63c3.12-3.12 3.12-8.19 0-11.31L193.94 256z"
        fill="currentColor"
        fill-rule="evenodd"
      />
    </svg>
    <span
      style="border: 0px; height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; white-space: nowrap; width: 1px;"
    >
      Close
    </span>
  </button>
</div>
`;

exports[`overrides Tag.Content.root should render correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #212121;
  border-radius: 6px;
  color: #fff;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  fill: #fff;
  font-size: 0.75rem;
  font-weight: 600;
  height: 1.5rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: inherit;
  padding: 0 0.75em;
}

.emotion-2 {
  background-color: red;
}

<div
  class="emotion-3 emotion-0 emotion-1 fp-Box fp-Tag"
>
  <div
    class="emotion-0 emotion-1 emotion-2 fp-Box fp-TagContent"
  >
    hello world
  </div>
</div>
`;

exports[`overrides Tag.outlined.root should render correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: inherit;
  padding: 0 0.75em;
}

.emotion-3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #212121;
  border-radius: 6px;
  color: #fff;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  fill: #fff;
  font-size: 0.75rem;
  font-weight: 600;
  height: 1.5rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-3 {
  background-color: unset;
  border: 1px solid #212121;
  color: #212121;
  fill: #212121;
}

.emotion-3 {
  background-color: red;
}

<div
  class="emotion-3 emotion-0 emotion-1 fp-Box fp-Tag"
>
  <div
    class="emotion-0 emotion-1 emotion-2 fp-Box fp-TagContent"
  >
    hello world
  </div>
</div>
`;

exports[`overrides Tag.root should render correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: inherit;
  padding: 0 0.75em;
}

.emotion-3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #212121;
  border-radius: 6px;
  color: #fff;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  fill: #fff;
  font-size: 0.75rem;
  font-weight: 600;
  height: 1.5rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-3 {
  background-color: red;
}

<div
  class="emotion-3 emotion-0 emotion-1 fp-Box fp-Tag"
>
  <div
    class="emotion-0 emotion-1 emotion-2 fp-Box fp-TagContent"
  >
    hello world
  </div>
</div>
`;

exports[`overrides sizes Tag.sizes.default.root should render correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: inherit;
  padding: 0 0.75em;
}

.emotion-3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #212121;
  border-radius: 6px;
  color: #fff;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  fill: #fff;
  font-size: 0.75rem;
  font-weight: 600;
  height: 1.5rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-3 {
  background-color: red;
}

<div
  class="emotion-3 emotion-0 emotion-1 fp-Box fp-Tag"
>
  <div
    class="emotion-0 emotion-1 emotion-2 fp-Box fp-TagContent"
  >
    hello world
  </div>
</div>
`;

exports[`overrides sizes Tag.sizes.large.root should render correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: inherit;
  padding: 0 0.75em;
}

.emotion-3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #212121;
  border-radius: 6px;
  color: #fff;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  fill: #fff;
  font-size: 0.75rem;
  font-weight: 600;
  height: 1.5rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-size: 1.25em;
  height: 2.5rem;
}

.emotion-3 {
  background-color: red;
}

<div
  class="emotion-3 emotion-0 emotion-1 fp-Box fp-Tag"
>
  <div
    class="emotion-0 emotion-1 emotion-2 fp-Box fp-TagContent"
  >
    hello world
  </div>
</div>
`;

exports[`overrides sizes Tag.sizes.medium.root should render correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: inherit;
  padding: 0 0.75em;
}

.emotion-3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #212121;
  border-radius: 6px;
  color: #fff;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  fill: #fff;
  font-size: 0.75rem;
  font-weight: 600;
  height: 1.5rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-size: 1em;
  height: 2rem;
}

.emotion-3 {
  background-color: red;
}

<div
  class="emotion-3 emotion-0 emotion-1 fp-Box fp-Tag"
>
  <div
    class="emotion-0 emotion-1 emotion-2 fp-Box fp-TagContent"
  >
    hello world
  </div>
</div>
`;

exports[`overrides sizes Tag.sizes.small.root should render correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: inherit;
  padding: 0 0.75em;
}

.emotion-3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #212121;
  border-radius: 6px;
  color: #fff;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  fill: #fff;
  font-size: 0.75rem;
  font-weight: 600;
  height: 1.5rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

<div
  class="emotion-3 emotion-0 emotion-1 fp-Box fp-Tag"
>
  <div
    class="emotion-0 emotion-1 emotion-2 fp-Box fp-TagContent"
  >
    hello world
  </div>
</div>
`;

exports[`props palette should render a danger tag correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: inherit;
  padding: 0 0.75em;
}

.emotion-3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #da1717;
  border-radius: 6px;
  color: #fff;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  fill: #fff;
  font-size: 0.75rem;
  font-weight: 600;
  height: 1.5rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

<div
  class="emotion-3 emotion-0 emotion-1 fp-Box fp-Tag"
>
  <div
    class="emotion-0 emotion-1 emotion-2 fp-Box fp-TagContent"
  >
    Hello world
  </div>
</div>
`;

exports[`props palette should render a info tag correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: inherit;
  padding: 0 0.75em;
}

.emotion-3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #1e67d5;
  border-radius: 6px;
  color: #fff;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  fill: #fff;
  font-size: 0.75rem;
  font-weight: 600;
  height: 1.5rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

<div
  class="emotion-3 emotion-0 emotion-1 fp-Box fp-Tag"
>
  <div
    class="emotion-0 emotion-1 emotion-2 fp-Box fp-TagContent"
  >
    Hello world
  </div>
</div>
`;

exports[`props palette should render a primary tag correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: inherit;
  padding: 0 0.75em;
}

.emotion-3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #574feb;
  border-radius: 6px;
  color: #fff;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  fill: #fff;
  font-size: 0.75rem;
  font-weight: 600;
  height: 1.5rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

<div
  class="emotion-3 emotion-0 emotion-1 fp-Box fp-Tag"
>
  <div
    class="emotion-0 emotion-1 emotion-2 fp-Box fp-TagContent"
  >
    Hello world
  </div>
</div>
`;

exports[`props palette should render a secondary tag correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: inherit;
  padding: 0 0.75em;
}

.emotion-3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #9e46d8;
  border-radius: 6px;
  color: #fff;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  fill: #fff;
  font-size: 0.75rem;
  font-weight: 600;
  height: 1.5rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

<div
  class="emotion-3 emotion-0 emotion-1 fp-Box fp-Tag"
>
  <div
    class="emotion-0 emotion-1 emotion-2 fp-Box fp-TagContent"
  >
    Hello world
  </div>
</div>
`;

exports[`props palette should render a success tag correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: inherit;
  padding: 0 0.75em;
}

.emotion-3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #0a7d33;
  border-radius: 6px;
  color: #fff;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  fill: #fff;
  font-size: 0.75rem;
  font-weight: 600;
  height: 1.5rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

<div
  class="emotion-3 emotion-0 emotion-1 fp-Box fp-Tag"
>
  <div
    class="emotion-0 emotion-1 emotion-2 fp-Box fp-TagContent"
  >
    Hello world
  </div>
</div>
`;

exports[`props palette should render a warning tag correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: inherit;
  padding: 0 0.75em;
}

.emotion-3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #ed9c22;
  border-radius: 6px;
  color: #000;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  fill: #000;
  font-size: 0.75rem;
  font-weight: 600;
  height: 1.5rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

<div
  class="emotion-3 emotion-0 emotion-1 fp-Box fp-Tag"
>
  <div
    class="emotion-0 emotion-1 emotion-2 fp-Box fp-TagContent"
  >
    Hello world
  </div>
</div>
`;

exports[`props should render a tag with onRemove correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-11 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #212121;
  border-radius: 6px;
  color: #fff;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  fill: #fff;
  font-size: 0.75rem;
  font-weight: 600;
  height: 1.5rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: inherit;
  padding: 0 0.75em;
}

.emotion-10.emotion-10.emotion-10 {
  background-color: #212121;
  color: #fff;
  fill: #fff;
  height: 1.5em;
  padding: 0 0.25em;
  margin-right: 0.25em;
  margin-left: -0.25em;
}

.emotion-10.emotion-10.emotion-10:hover {
  background-color: #080808;
}

.emotion-10.emotion-10.emotion-10:focus {
  box-shadow: unset;
}

.emotion-7 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #fcfcfc;
  border-radius: 6px;
  color: #212121;
  fill: #212121;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 600;
  min-height: 2.75rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0 1rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  border: 1px solid #d9d9d9;
}

.emotion-7[disabled],
.emotion-7[aria-disabled="true"] {
  cursor: not-allowed;
  opacity: 0.7;
  outline: unset;
  pointer-events: unset;
}

.emotion-7:focus {
  outline: unset;
  z-index: 2;
  box-shadow: #b3b3b3 0px 0px 0px 1px, #d9d9d9 0px 0px 0px 3px;
  border-color: transparent;
}

.emotion-7:hover {
  background-color: #efefef;
}

.emotion-7:hover:active {
  background-color: #d6d6d6;
}

.emotion-7 {
  background-color: unset;
  border: unset;
  color: #212121;
  fill: #212121;
  box-shadow: unset;
}

.emotion-7:hover {
  background-color: rgba(0,0,0,0.05);
}

.emotion-7:hover:active {
  background-color: rgba(0,0,0,0.1);
}

.emotion-6.emotion-6 {
  min-height: unset;
  padding: 0.5em;
}

.emotion-5 {
  font-size: 1rem !important;
}

.emotion-3 {
  fill: inherit;
  position: relative;
  height: 1em;
  width: 1em;
}

<div
  class="emotion-11 emotion-0 emotion-1 fp-Box fp-Tag"
>
  <div
    class="emotion-0 emotion-1 emotion-2 fp-Box fp-TagContent"
  >
    Hello world
  </div>
  <button
    class="emotion-6 emotion-7 emotion-0 emotion-1 emotion-10 fp-Box fp-TagClose fp-Button fp-ButtonClose"
    type="button"
  >
    <svg
      class="emotion-3 emotion-0 emotion-5 fp-Box fp-Icon"
      role="img"
      viewBox="0 0 320 512"
    >
      <path
        d="M193.94 256L296.5 153.44l21.15-21.15c3.12-3.12 3.12-8.19 0-11.31l-22.63-22.63c-3.12-3.12-8.19-3.12-11.31 0L160 222.06 36.29 98.34c-3.12-3.12-8.19-3.12-11.31 0L2.34 120.97c-3.12 3.12-3.12 8.19 0 11.31L126.06 256 2.34 379.71c-3.12 3.12-3.12 8.19 0 11.31l22.63 22.63c3.12 3.12 8.19 3.12 11.31 0L160 289.94 262.56 392.5l21.15 21.15c3.12 3.12 8.19 3.12 11.31 0l22.63-22.63c3.12-3.12 3.12-8.19 0-11.31L193.94 256z"
        fill="currentColor"
        fill-rule="evenodd"
      />
    </svg>
    <span
      style="border: 0px; height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; white-space: nowrap; width: 1px;"
    >
      Close
    </span>
  </button>
</div>
`;

exports[`props should render correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #212121;
  border-radius: 6px;
  color: #fff;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  fill: #fff;
  font-size: 0.75rem;
  font-weight: 600;
  height: 1.5rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: inherit;
  padding: 0 0.75em;
}

<div
  class="emotion-3 emotion-0 emotion-1 fp-Box fp-Tag"
>
  <div
    class="emotion-0 emotion-1 emotion-2 fp-Box fp-TagContent"
  >
    Hello world
  </div>
</div>
`;

exports[`props should render correctly with CSS props 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #212121;
  border-radius: 6px;
  color: #fff;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  fill: #fff;
  font-size: 0.75rem;
  font-weight: 600;
  height: 1.5rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: inherit;
  padding: 0 0.75em;
}

.emotion-3 {
  color: #574feb !important;
}

<div
  class="emotion-4 emotion-0 emotion-3 fp-Box fp-Tag"
>
  <div
    class="emotion-0 emotion-1 emotion-2 emotion-3 fp-Box fp-TagContent"
  >
    Hello world
  </div>
</div>
`;

exports[`props size should render a default tag correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #212121;
  border-radius: 6px;
  color: #fff;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  fill: #fff;
  font-size: 0.75rem;
  font-weight: 600;
  height: 1.5rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: inherit;
  padding: 0 0.75em;
}

<div
  class="emotion-3 emotion-0 emotion-1 fp-Box fp-Tag"
>
  <div
    class="emotion-0 emotion-1 emotion-2 fp-Box fp-TagContent"
  >
    Hello world
  </div>
</div>
`;

exports[`props size should render a large tag correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: inherit;
  padding: 0 0.75em;
}

.emotion-3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #212121;
  border-radius: 6px;
  color: #fff;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  fill: #fff;
  font-size: 0.75rem;
  font-weight: 600;
  height: 1.5rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-size: 1.25em;
  height: 2.5rem;
}

<div
  class="emotion-3 emotion-0 emotion-1 fp-Box fp-Tag"
>
  <div
    class="emotion-0 emotion-1 emotion-2 fp-Box fp-TagContent"
  >
    Hello world
  </div>
</div>
`;

exports[`props size should render a medium tag correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: inherit;
  padding: 0 0.75em;
}

.emotion-3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #212121;
  border-radius: 6px;
  color: #fff;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  fill: #fff;
  font-size: 0.75rem;
  font-weight: 600;
  height: 1.5rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-size: 1em;
  height: 2rem;
}

<div
  class="emotion-3 emotion-0 emotion-1 fp-Box fp-Tag"
>
  <div
    class="emotion-0 emotion-1 emotion-2 fp-Box fp-TagContent"
  >
    Hello world
  </div>
</div>
`;

exports[`props size should render a small tag correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: inherit;
  padding: 0 0.75em;
}

.emotion-3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #212121;
  border-radius: 6px;
  color: #fff;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  fill: #fff;
  font-size: 0.75rem;
  font-weight: 600;
  height: 1.5rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

<div
  class="emotion-3 emotion-0 emotion-1 fp-Box fp-Tag"
>
  <div
    class="emotion-0 emotion-1 emotion-2 fp-Box fp-TagContent"
  >
    Hello world
  </div>
</div>
`;

exports[`props size should render correctly with overrides 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: inherit;
  padding: 0 0.75em;
}

.emotion-3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #212121;
  border-radius: 6px;
  color: #fff;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  fill: #fff;
  font-size: 0.75rem;
  font-weight: 600;
  height: 1.5rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

<div
  class="emotion-3 emotion-0 emotion-1 fp-Box fp-Tag"
>
  <div
    class="emotion-0 emotion-1 emotion-2 fp-Box fp-TagContent"
  >
    Hello world
  </div>
</div>
`;

exports[`props size should render correctly with overrides 2`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: inherit;
  padding: 0 0.75em;
}

.emotion-3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #212121;
  border-radius: 6px;
  color: #fff;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  fill: #fff;
  font-size: 0.75rem;
  font-weight: 600;
  height: 1.5rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-3 {
  background-color: red;
}

<div
  class="emotion-3 emotion-0 emotion-1 fp-Box fp-Tag"
>
  <div
    class="emotion-0 emotion-1 emotion-2 fp-Box fp-TagContent"
  >
    Hello world
  </div>
</div>
`;

exports[`props size should render correctly with overrides 3`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: inherit;
  padding: 0 0.75em;
}

.emotion-3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #212121;
  border-radius: 6px;
  color: #fff;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  fill: #fff;
  font-size: 0.75rem;
  font-weight: 600;
  height: 1.5rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-size: 1em;
  height: 2rem;
}

.emotion-3 {
  background-color: red;
}

<div
  class="emotion-3 emotion-0 emotion-1 fp-Box fp-Tag"
>
  <div
    class="emotion-0 emotion-1 emotion-2 fp-Box fp-TagContent"
  >
    Hello world
  </div>
</div>
`;

exports[`props size should render correctly with overrides 4`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: inherit;
  padding: 0 0.75em;
}

.emotion-3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #212121;
  border-radius: 6px;
  color: #fff;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  fill: #fff;
  font-size: 0.75rem;
  font-weight: 600;
  height: 1.5rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-size: 1.25em;
  height: 2.5rem;
}

.emotion-3 {
  background-color: red;
}

<div
  class="emotion-3 emotion-0 emotion-1 fp-Box fp-Tag"
>
  <div
    class="emotion-0 emotion-1 emotion-2 fp-Box fp-TagContent"
  >
    Hello world
  </div>
</div>
`;

exports[`theming Tag.Close.root should render correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-11 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #212121;
  border-radius: 6px;
  color: #fff;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  fill: #fff;
  font-size: 0.75rem;
  font-weight: 600;
  height: 1.5rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: inherit;
  padding: 0 0.75em;
}

.emotion-7 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #fcfcfc;
  border-radius: 6px;
  color: #212121;
  fill: #212121;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 600;
  min-height: 2.75rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0 1rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  border: 1px solid #d9d9d9;
}

.emotion-7[disabled],
.emotion-7[aria-disabled="true"] {
  cursor: not-allowed;
  opacity: 0.7;
  outline: unset;
  pointer-events: unset;
}

.emotion-7:focus {
  outline: unset;
  z-index: 2;
  box-shadow: #b3b3b3 0px 0px 0px 1px, #d9d9d9 0px 0px 0px 3px;
  border-color: transparent;
}

.emotion-7:hover {
  background-color: #efefef;
}

.emotion-7:hover:active {
  background-color: #d6d6d6;
}

.emotion-7 {
  background-color: unset;
  border: unset;
  color: #212121;
  fill: #212121;
  box-shadow: unset;
}

.emotion-7:hover {
  background-color: rgba(0,0,0,0.05);
}

.emotion-7:hover:active {
  background-color: rgba(0,0,0,0.1);
}

.emotion-6.emotion-6 {
  min-height: unset;
  padding: 0.5em;
}

.emotion-5 {
  font-size: 1rem !important;
}

.emotion-3 {
  fill: inherit;
  position: relative;
  height: 1em;
  width: 1em;
}

.emotion-10.emotion-10.emotion-10 {
  background-color: #212121;
  color: #fff;
  fill: #fff;
  height: 1.5em;
  padding: 0 0.25em;
  margin-right: 0.25em;
  margin-left: -0.25em;
}

.emotion-10.emotion-10.emotion-10:hover {
  background-color: #080808;
}

.emotion-10.emotion-10.emotion-10:focus {
  box-shadow: unset;
}

.emotion-10.emotion-10.emotion-10 {
  background-color: red;
}

<div
  class="emotion-11 emotion-0 emotion-1 fp-Box fp-Tag"
>
  <div
    class="emotion-0 emotion-1 emotion-2 fp-Box fp-TagContent"
  >
    hello world
  </div>
  <button
    class="emotion-6 emotion-7 emotion-0 emotion-1 emotion-10 fp-Box fp-TagClose fp-Button fp-ButtonClose"
    type="button"
  >
    <svg
      class="emotion-3 emotion-0 emotion-5 fp-Box fp-Icon"
      role="img"
      viewBox="0 0 320 512"
    >
      <path
        d="M193.94 256L296.5 153.44l21.15-21.15c3.12-3.12 3.12-8.19 0-11.31l-22.63-22.63c-3.12-3.12-8.19-3.12-11.31 0L160 222.06 36.29 98.34c-3.12-3.12-8.19-3.12-11.31 0L2.34 120.97c-3.12 3.12-3.12 8.19 0 11.31L126.06 256 2.34 379.71c-3.12 3.12-3.12 8.19 0 11.31l22.63 22.63c3.12 3.12 8.19 3.12 11.31 0L160 289.94 262.56 392.5l21.15 21.15c3.12 3.12 8.19 3.12 11.31 0l22.63-22.63c3.12-3.12 3.12-8.19 0-11.31L193.94 256z"
        fill="currentColor"
        fill-rule="evenodd"
      />
    </svg>
    <span
      style="border: 0px; height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; white-space: nowrap; width: 1px;"
    >
      Close
    </span>
  </button>
</div>
`;

exports[`theming Tag.Content.root should render correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #212121;
  border-radius: 6px;
  color: #fff;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  fill: #fff;
  font-size: 0.75rem;
  font-weight: 600;
  height: 1.5rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: inherit;
  padding: 0 0.75em;
}

.emotion-2 {
  background-color: red;
}

<div
  class="emotion-3 emotion-0 emotion-1 fp-Box fp-Tag"
>
  <div
    class="emotion-0 emotion-1 emotion-2 fp-Box fp-TagContent"
  >
    hello world
  </div>
</div>
`;

exports[`theming Tag.outlined.root should render correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: inherit;
  padding: 0 0.75em;
}

.emotion-3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #212121;
  border-radius: 6px;
  color: #fff;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  fill: #fff;
  font-size: 0.75rem;
  font-weight: 600;
  height: 1.5rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-3 {
  background-color: unset;
  border: 1px solid #212121;
  color: #212121;
  fill: #212121;
}

.emotion-3 {
  background-color: red;
}

<div
  class="emotion-3 emotion-0 emotion-1 fp-Box fp-Tag"
>
  <div
    class="emotion-0 emotion-1 emotion-2 fp-Box fp-TagContent"
  >
    hello world
  </div>
</div>
`;

exports[`theming Tag.root should render correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: inherit;
  padding: 0 0.75em;
}

.emotion-3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #212121;
  border-radius: 6px;
  color: #fff;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  fill: #fff;
  font-size: 0.75rem;
  font-weight: 600;
  height: 1.5rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-3 {
  background-color: red;
}

<div
  class="emotion-3 emotion-0 emotion-1 fp-Box fp-Tag"
>
  <div
    class="emotion-0 emotion-1 emotion-2 fp-Box fp-TagContent"
  >
    hello world
  </div>
</div>
`;

exports[`theming sizes Tag.sizes.default.root should render correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: inherit;
  padding: 0 0.75em;
}

.emotion-3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #212121;
  border-radius: 6px;
  color: #fff;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  fill: #fff;
  font-size: 0.75rem;
  font-weight: 600;
  height: 1.5rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-3 {
  background-color: red;
}

<div
  class="emotion-3 emotion-0 emotion-1 fp-Box fp-Tag"
>
  <div
    class="emotion-0 emotion-1 emotion-2 fp-Box fp-TagContent"
  >
    hello world
  </div>
</div>
`;

exports[`theming sizes Tag.sizes.large.root should render correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: inherit;
  padding: 0 0.75em;
}

.emotion-3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #212121;
  border-radius: 6px;
  color: #fff;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  fill: #fff;
  font-size: 0.75rem;
  font-weight: 600;
  height: 1.5rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-size: 1.25em;
  height: 2.5rem;
}

.emotion-3 {
  background-color: red;
}

<div
  class="emotion-3 emotion-0 emotion-1 fp-Box fp-Tag"
>
  <div
    class="emotion-0 emotion-1 emotion-2 fp-Box fp-TagContent"
  >
    hello world
  </div>
</div>
`;

exports[`theming sizes Tag.sizes.medium.root should render correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: inherit;
  padding: 0 0.75em;
}

.emotion-3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #212121;
  border-radius: 6px;
  color: #fff;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  fill: #fff;
  font-size: 0.75rem;
  font-weight: 600;
  height: 1.5rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-size: 1em;
  height: 2rem;
}

.emotion-3 {
  background-color: red;
}

<div
  class="emotion-3 emotion-0 emotion-1 fp-Box fp-Tag"
>
  <div
    class="emotion-0 emotion-1 emotion-2 fp-Box fp-TagContent"
  >
    hello world
  </div>
</div>
`;

exports[`theming sizes Tag.sizes.small.root should render correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: inherit;
  padding: 0 0.75em;
}

.emotion-3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #212121;
  border-radius: 6px;
  color: #fff;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  fill: #fff;
  font-size: 0.75rem;
  font-weight: 600;
  height: 1.5rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

<div
  class="emotion-3 emotion-0 emotion-1 fp-Box fp-Tag"
>
  <div
    class="emotion-0 emotion-1 emotion-2 fp-Box fp-TagContent"
  >
    hello world
  </div>
</div>
`;
